k8s/simple-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truelight-timer
  namespace: staging
spec:
  selector:
    matchLabels:
      run: truelight-timer
  # remove replica if using gitops
  replicas: 1
  template:
    metadata:
      labels:
        run: truelight-timer
    spec:
      containers:
      - name: truelight-timer
        image: ahmedbello/truelight-timer:1.0.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
