k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truelight-timer
  namespace: staging
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    run: truelight-timer
