k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truelight-timer
  namespace: staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:767423351130:certificate/685a8002-f638-46e9-aa4e-1e9a5c4efec9
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: timer.truelight.online
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: truelight-timer
                port:
                  number: 80
